Fixed remaining webhint issues

--- a/guides/commit.html
+++ b/guides/commit.html
@@ -29,19 +29,21 @@
 
     <ol>
       <li>Select the files you wish to commit and click <i>Stage Selected</i><br>
-      (Alternatively you can select <i>Stage All</i> to select all files)</li>
-      <picture class="image">
-        <source type="image/webp" srcset="../media/commit-1.webp" />
-        <img src="../media/commit-1.jpg"/>
-      </picture>
+        (Alternatively you can select <i>Stage All</i> to select all files)<br>
+        <picture class="image">
+          <source type="image/webp" srcset="../media/commit-1.webp" />
+          <img alt="Commit #1" src="../media/commit-1.jpg"/>
+        </picture>
+      </li>
       <li>The files you have selected should show up in the <i>Staged Files</i> section</li>
       <li>Enter a meaningful commit message to describe what you are committing</li>
       <li><i>Optional: Check the "Push" checkbox if you wish to push the commits to GitHub immediately after you commit</i></li>
-      <li>When you are done, click the commit button to commit the code</li>
-      <picture class="image">
-        <source type="image/webp" srcset="../media/commit-2.webp" />
-        <img src="../media/commit-2.jpg"/>
-      </picture>
+      <li>When you are done, click the commit button to commit the code<br>
+        <picture class="image">
+          <source type="image/webp" srcset="../media/commit-2.webp" />
+          <img alt="Commit #2" src="../media/commit-2.jpg"/>
+        </picture>
+      </li>
     </ol>
     
     <div id="divvid"><b>Demo Video</b><br>
