--- a/guides/pr.html
+++ b/guides/pr.html
@@ -37,42 +37,48 @@
       <ol>
         <li>Click the <i>Branch</i> button to create a new branch</li>
         <li>Enter your desired branch name <i>(To sort the branch to folders, append / to the branch name)</i></li>
-        <li>Click <i>Create Branch</i> to confirm branch creation</li>
-        <picture class="image">
-          <source type="image/webp" srcset="../media/pr-1.webp" />
-          <img src="../media/pr-1.jpg"/>
-        </picture>
+        <li>Click <i>Create Branch</i> to confirm branch creation<br>
+          <picture class="image">
+            <source type="image/webp" srcset="../media/pr-1.webp" />
+            <img alt="Issue Pull Request for Feature #1" src="../media/pr-1.jpg"/>
+          </picture>
+        </li>
         <li>Do your necessary code implementation/fixes/changes<br>
         (See <a href="pull.html">Pull from origin</a>, <a href="commit.html">Commit Code</a>, <a href="push.html">Push to origin</a>)</li>
         <li>When it is all done, head over to the repo page</li>
-        <li>You should be able to see your branch name highlighted in yellow, find your branch and select <i>Compare and Pull Request</i></li>
-        <picture class="image">
-          <source type="image/webp" srcset="../media/pr-2.webp" />
-          <img src="../media/pr-2.jpg"/>
-        </picture>
+        <li>You should be able to see your branch name highlighted in yellow, find your branch and select <i>Compare and Pull Request</i><br>
+          <picture class="image">
+            <source type="image/webp" srcset="../media/pr-2.webp" />
+            <img alt="Issue Pull Request for Feature #2" src="../media/pr-2.jpg"/>
+          </picture>
+        </li>
         <li><i>Note: If it does not show up, manually create the PR by going to the Pull Request tab and select "Create Pull Request", after which select your branch in the compare dropdown box</i></li>
         <li>Enter your Pull Request Title and Descriptions accordingly if needed. Also modify the settings on the left if you need to do so</li>
-        <li>When you are done, create the PR by clicking the green <i>Create Pull Request</i> button</li>
-        <picture class="image">
-          <source type="image/webp" srcset="../media/pr-3.webp" />
-          <img src="../media/pr-3.jpg"/>
-        </picture>
+        <li>When you are done, create the PR by clicking the green <i>Create Pull Request</i> button<br>
+          <picture class="image">
+            <source type="image/webp" srcset="../media/pr-3.webp" />
+            <img alt="Issue Pull Request for Feature #3" src="../media/pr-3.jpg"/>
+          </picture>
+        </li>
         <li>Now we play the waiting game until a green tick appears and it says <i>All checks have passed</i> (Note: If it fails, your code is not compiling and needs to be fixed)</li>
-        <li>If all checks have passed, either you or anyone else can go ahead and click the green <i>Merge Pull Request</i> button</li>
-        <picture class="image">
-          <source type="image/webp" srcset="../media/pr-4.webp" />
-          <img src="../media/pr-4.jpg"/>
-        </picture>
-        <li>Continue clicking <i>Confirm merge</i> here</li>
-        <picture class="image">
-          <source type="image/webp" srcset="../media/pr-5.webp" />
-          <img src="../media/pr-5.jpg"/>
-        </picture>
-        <li>When you are done you can switch back to the master branch (you may now delete the branch if you want, though its entirely optional)</li>
-        <picture class="image">
-          <source type="image/webp" srcset="../media/pr-6.webp" />
-          <img src="../media/pr-6.jpg"/>
-        </picture>
+        <li>If all checks have passed, either you or anyone else can go ahead and click the green <i>Merge Pull Request</i> button<br>
+          <picture class="image">
+            <source type="image/webp" srcset="../media/pr-4.webp" />
+            <img alt="Issue Pull Request for Feature #4" src="../media/pr-4.jpg"/>
+          </picture>
+        </li>
+        <li>Continue clicking <i>Confirm merge</i> here<br>
+          <picture class="image">
+            <source type="image/webp" srcset="../media/pr-5.webp" />
+            <img alt="Issue Pull Request for Feature #5" src="../media/pr-5.jpg"/>
+          </picture>
+        </li>
+        <li>When you are done you can switch back to the master branch (you may now delete the branch if you want, though its entirely optional)<br>
+          <picture class="image">
+            <source type="image/webp" srcset="../media/pr-6.webp" />
+            <img alt="Issue Pull Request for Feature #6" src="../media/pr-6.jpg"/>
+          </picture>
+        </li>
       </ol>
     
     <div id="divvid"><b>Demo Video</b><br>
