--- a/guides/pull.html
+++ b/guides/pull.html
@@ -30,18 +30,20 @@
     <ol>
       <li>Click the <i>Fetch</i> button to ensure that all changes are fetched</li>
       <li>Ensure that you are at the correct branch you wish to pull changes from</li>
-      <li>Click the <i>Pull</i> Button</li>
-      <picture class="image">
-        <source type="image/webp" srcset="../media/pull-1.webp" />
-        <img src="../media/pull-1.jpg"/>
-      </picture>
+      <li>Click the <i>Pull</i> Button<br>
+        <picture class="image">
+          <source type="image/webp" srcset="../media/pull-1.webp" />
+          <img alt="Pull code from Origin #1" src="../media/pull-1.jpg"/>
+        </picture>
+      </li>
       <li>Double check that the remote and local branches match<br>
       <i>(If it doesnt match, select the correct remote branch with the dropdown box)</i></li>
-      <li>Press OK to confirm and pull new changes</li>
-      <picture class="image">
-        <source type="image/webp" srcset="../media/pull-2.webp" />
-        <img src="../media/pull-2.jpg"/>
-      </picture>
+      <li>Press OK to confirm and pull new changes<br>
+        <picture class="image">
+          <source type="image/webp" srcset="../media/pull-2.webp" />
+          <img alt="Pull Code from Origin #2" src="../media/pull-2.jpg"/>
+        </picture>
+      </li>
     </ol>    
     
     <div id="divvid"><b>Demo Video</b><br>
