--- a/guides/sourcetree.html
+++ b/guides/sourcetree.html
@@ -26,7 +26,7 @@
     <h2>Main Interface</h2>
     <picture class="image">
       <source type="image/webp" srcset="../media/ghst/sourcetree-1.webp" />
-      <img src="../media/ghst/sourcetree-1.png" />
+      <img alt="SourceTree Main View" src="../media/ghst/sourcetree-1.png" />
     </picture>
     <ol>
       <li>Top sidebar (see Sidebars)</li>
@@ -39,7 +39,7 @@
     <br>
     <picture class="image">
       <source type="image/webp" srcset="../media/ghst/sourcetree-2.webp" />
-      <img src="../media/ghst/sourcetree-2.png" />
+      <img alt="SourceTree Code History View" src="../media/ghst/sourcetree-2.png" />
     </picture>
     <ol>
       <li>History of all commits in the repository</li>
@@ -49,7 +49,7 @@
     <h2>Sidebars</h2>
     <picture class="image">
       <source type="image/webp" srcset="../media/ghst/sourcetree-3.webp" />
-      <img src="../media/ghst/sourcetree-3.png" />
+      <img alt="SourceTree Tool Bar" src="../media/ghst/sourcetree-3.png" />
     </picture>
     <ol>
         <li>Button to Push, Pull or Fetch commits respectively</li>
@@ -61,7 +61,7 @@
     <br>
     <picture class="image">
       <source type="image/webp" srcset="../media/ghst/sourcetree-4.webp" />
-      <img src="../media/ghst/sourcetree-4.png" />
+      <img alt="SourceTree Sidebar" src="../media/ghst/sourcetree-4.png" />
     </picture>
     <ol>
       <li>Branches currently on your local machine for you to switch to</li>
