--- a/guides/amend.html
+++ b/guides/amend.html
@@ -30,17 +30,18 @@
 
     <ol>
       <li>Stage all file changes you wish to add to the commit by selecting them and clicking either <i>Stage All</i> or <i>Stage Selected</i></li>
-      <li>Select the <i>Terminal</i> button</li>
-      <picture class="image">
-        <source type="image/webp" srcset="../media/amend-1.webp" />
-        <img src="../media/amend-1.jpg"/>
-      </picture>
+      <li>Select the <i>Terminal</i> button<br>
+        <picture class="image">
+          <source type="image/webp" srcset="../media/amend-1.webp" />
+          <img alt="Amend Commit #1" src="../media/amend-1.jpg"/>
+        </picture>
+      </li>
       <li>Execute the following command <pre class="prettyprint">git commit --amend</pre></li>
-      <li>Update your commit message and save and exit it (In the nano app as shown in the picture below, its Ctrl+O and Ctrl+W)</li>
-      <picture class="image">
-        <source type="image/webp" srcset="../media/amend-2.webp" />
-        <img src="../media/amend-2.jpg"/>
-      </picture>
+      <li>Update your commit message and save and exit it (In the nano app as shown in the picture below, its Ctrl+O and Ctrl+W)<br>
+        <picture class="image">
+          <source type="image/webp" srcset="../media/amend-2.webp" />
+          <img alt="Amend Commit #2" src="../media/amend-2.jpg"/>
+        </picture></li>
       <li>You are done!</li>
     </ol>
     
