--- a/guides/buildserver.html
+++ b/guides/buildserver.html
@@ -30,21 +30,24 @@
     Or wonder why your build is failing for some reason? This will show you how to access the CI to view the logs</p>
 
     <ol>
-      <li>Go too your PR (or commit) and click the <i>Details</i> link</li>
-      <picture class="image">
-        <source type="image/webp" srcset="../media/travis-1.webp" />
-        <img src="../media/travis-1.jpg"/>
-      </picture>
-      <li>Click on the link for <i>the build</i> like shown in the picture below</li>
-      <picture class="image">
-        <source type="image/webp" srcset="../media/travis-2.webp" />
-        <img src="../media/travis-2.jpg"/>
-      </picture>
-      <li>You can now view the logs as shown in the picture below</li>
-      <picture class="image">
-        <source type="image/webp" srcset="../media/travis-3.webp" />
-        <img src="../media/travis-3.jpg"/>
-      </picture>
+      <li>Go too your PR (or commit) and click the <i>Details</i> link<br>
+        <picture class="image">
+          <source type="image/webp" srcset="../media/travis-1.webp" />
+          <img alt="Travis CI #1" src="../media/travis-1.jpg"/>
+        </picture>
+      </li>
+      <li>Click on the link for <i>the build</i> like shown in the picture below<br>
+        <picture class="image">
+          <source type="image/webp" srcset="../media/travis-2.webp" />
+          <img alt="Travis CI #2" src="../media/travis-2.jpg"/>
+        </picture>
+      </li>
+      <li>You can now view the logs as shown in the picture below<br>
+        <picture class="image">
+          <source type="image/webp" srcset="../media/travis-3.webp" />
+          <img alt="Travis CI #3" src="../media/travis-3.jpg"/>
+        </picture>
+      </li>
     </ol>
     
     <div id="divvid"><b>Demo Video</b><br>
