--- a/guides/push.html
+++ b/guides/push.html
@@ -29,17 +29,19 @@
 
     <ol>
       <li>Do all the commits you want (See <a href="commit.html">Add Commits</a>)</li>
-      <li>Click the <i>Push</i> button</li>
-      <picture class="image">
-        <source type="image/webp" srcset="../media/push-1.webp" />
-        <img src="../media/push-1.jpg"/>
-      </picture>
+      <li>Click the <i>Push</i> button<br>
+        <picture class="image">
+          <source type="image/webp" srcset="../media/push-1.webp" />
+          <img alt="Push Code to Origin #1" src="../media/push-1.jpg"/>
+        </picture>
+      </li>
       <li>Make sure all branches you wish to push are selected and checked</li>
-      <li>Click the <i>Push</i> button</li>
-      <picture class="image">
-        <source type="image/webp" srcset="../media/push-2.webp" />
-        <img src="../media/push-2.jpg"/>
-      </picture>
+      <li>Click the <i>Push</i> button<br>
+        <picture class="image">
+          <source type="image/webp" srcset="../media/push-2.webp" />
+          <img alt="Push Code to Origin #2" src="../media/push-2.jpg"/>
+        </picture>
+      </li>
     </ol>
     
     <div id="divvid"><b>Demo Video</b><br>
