Update references to not only refer to GitHub for the common files

--- a/guides/commit.html
+++ b/guides/commit.html
@@ -37,7 +37,7 @@
       </li>
       <li>The files you have selected should show up in the <i>Staged Files</i> section</li>
       <li>Enter a meaningful commit message to describe what you are committing</li>
-      <li><i>Optional: Check the "Push" checkbox if you wish to push the commits to GitHub immediately after you commit</i></li>
+      <li><i>Optional: Check the "Push" checkbox if you wish to push the commits to the origin immediately after you commit</i></li>
       <li>When you are done, click the commit button to commit the code<br>
         <picture class="image">
           <source type="image/webp" srcset="../media/commit-2.webp" />
