--- a/guides/pull.html
+++ b/guides/pull.html
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-    <h1>Update Local Project files from GitHub (git pull)</h1>
+    <h1>Update Local Project files from Origin (git pull)</h1>
     <div id="sidebar">
       <button type="button"><a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a></button>
       <div id="breadcrumb-ctrl">
@@ -25,7 +25,7 @@
       This file relates to both <i class="fab fa-github"></i> GitHub and <i class="fab fa-gitlab"></i> GitLab.
     </pre>
 
-    <p id="description">The following guide shows you how to update your local repository with the latest changes from GitHub</p>
+    <p id="description">The following guide shows you how to update your local repository with the latest changes from origin</p>
 
     <ol>
       <li>Click the <i>Fetch</i> button to ensure that all changes are fetched</li>
@@ -52,8 +52,8 @@
 
     <h2>Console Commands Used</h2>
     <pre class="prettyprint">
-      git fetch origin # Fetch changes from GitHub
-      git pull # Pulls changes from GitHub
+      git fetch origin # Fetch changes from origin
+      git pull # Pulls changes from origin
     </pre>
     <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js" integrity="sha384-kzCVIKjPGX5Z3kl3N77p1HfqOB9a1qXhDxX5FhD9AEDuQKEShJBzrR0o3iKAMUWR" crossorigin="anonymous"></script>
 
