--- a/guides/push.html
+++ b/guides/push.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Push to GitHub - How to Git for Dummies (NTU SCSE Style)</title>
+    <title>Push to origin - How to Git for Dummies (NTU SCSE Style)</title>
     <link rel="stylesheet" type="text/css" href="../style.css">
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
     <link rel="icon" href="../favicon.ico" type="image/x-icon">
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-    <h1>Push changes made to GitHub (git push)</h1>
+    <h1>Push changes made to origin (git push)</h1>
     <div id="sidebar">
       <button type="button"><a class="button" id="rtnbtn" href="../index.html">↵ Return to Main Screen</a></button>
       <div id="breadcrumb-ctrl">
@@ -25,7 +25,7 @@
       This file relates to both <i class="fab fa-github"></i> GitHub and <i class="fab fa-gitlab"></i> GitLab.
     </pre>
 
-    <p id="description">The following guide shows you how to push your updated code to GitHub</p>
+    <p id="description">The following guide shows you how to push your updated code to origin</p>
 
     <ol>
       <li>Do all the commits you want (See <a href="commit.html">Add Commits</a>)</li>
