--- a/guides/sourcetree.html
+++ b/guides/sourcetree.html
@@ -65,7 +65,7 @@
     </picture>
     <ol>
       <li>Branches currently on your local machine for you to switch to</li>
-      <li>Branches found on GitHub for you to checkout (download to local machine)</li>
+      <li>Branches found on GitHub <i class="fab fa-github"></i>/GitLab <i class="fab fa-gitlab"></i> for you to checkout (download to local machine)</li>
       <li>Stashes found on your local machine (you can right click to apply stash to reapply the changes you made back to the repository)</li>
     </ol>
 
