--- a/guides/mr.html
+++ b/guides/mr.html
@@ -89,7 +89,11 @@
     
     <div id="divvid"><b>Demo Video</b><br>
     <span>The following is a video on how this is being done. Read the how-to guide before watching the video for actual steps to do it</span></div>
-    <video preload="metadata" controls src="../media/gitlab/How to issue a MR.mp4" type="video/mp4">Your browser does not support video files</video>
+    <video preload="metadata" controls>
+      <source src="../media/gitlab/How to issue a MR.webm" type="video/webm" />
+      <source src="../media/gitlab/How to issue a MR.mp4" type="video/mp4" />
+      Your browser does not support video files
+    </video>
 
     <h2>Console Commands Used</h2>
     <pre class="prettyprint">
